2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  some comments.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit tests for "Bug 538208 - Go to declaration not working
	  over a generic method...".

2009-09-07  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj: 

	* Mono.TextEditor.Tests.DefaultEditActions/DeleteActionTests.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/CaretMoveActionTests.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/SelectionActionTests.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/CaretMoveActionsTest.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/SelectionSelectAllTests.cs:
	  Extended text editor action tests.

2009-09-07  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* Mono.TextEditor.Tests.DefaultEditActions/CaretMoveTests.cs: 

	* Mono.TextEditor.Tests.DefaultEditActions/CaretMoveActionsTest.cs:
	  Worked on caret move action tests.

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added unit test for explicit members.

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Added some
	  more complex test cases.

	* TestBase.cs: Handled unlikely error in addin configuration.

2009-08-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/DeclareLocalTests.cs: Added declare
	  local unit test.

2009-08-31  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.Refactoring/DeclareLocalTests.cs:
	* MonoDevelop.CSharpBinding/TestViewContent.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.Refactoring/IntegrateTemporaryVariableTests.cs:
	* MonoDevelop.Refactoring/IntroduceConstantRefactoringTests.cs:
	* MonoDevelop.Refactoring/IntroduceFormatItemRefactoringTests.cs: