@@ -59,6 +59,7 @@ FILES =  \
 	MonoDevelop.CSharpBinding/TestViewContent.cs \
 	MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs \
 	MonoDevelop.CSharpBinding/TopLevelTests.cs \
+	MonoDevelop.Projects.Gui/CompletionListWindowTests.cs \
 	MonoDevelop.Projects/CompletionDatabaseTests.cs \
 	MonoDevelop.Projects/DomCompilationUnitTests.cs \
 	MonoDevelop.Projects/DomPersistenceTests.cs \
