@@ -1,3 +1,12 @@
+2009-09-12  Mike Krüger  <mkrueger@novell.com>
+
+	* Makefile.am:
+	* UnitTests.csproj:
+	* MonoDevelop.Projects.Gui: 
+
+	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Added
+	  code completion window unit tests.
+
 2009-09-11  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
